--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "firebase": "^9.12.1",
+    "html2pdf.js": "^0.10.1",
     "register-service-worker": "^1.7.2",
+    "uuid": "^9.0.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
