--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
@@ -19,6 +20,7 @@
     "register-service-worker": "^1.7.2",
     "uuid": "^9.0.0",
     "vue": "^2.6.14",
+    "vue-html2canvas": "^0.0.4",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
